--- a/src/css/output.css
+++ b/src/css/output.css
@@ -697,10 +697,6 @@ body {
   margin-right: 0.5rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -725,8 +721,8 @@ body {
   margin-top: auto;
 }
 
-.ml-8 {
-  margin-left: 2rem;
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .block {
@@ -743,10 +739,6 @@ body {
 
 .hidden {
   display: none;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-48 {
@@ -769,32 +761,12 @@ body {
   height: 100%;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-7 {
-  height: 1.75rem;
-}
-
-.h-5 {
-  height: 1.25rem;
+.h-10 {
+  height: 2.5rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .w-6 {
@@ -805,12 +777,8 @@ body {
   width: 100%;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-5 {
-  width: 1.25rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .max-w-2xl {
@@ -835,10 +803,6 @@ body {
 
 .flex-col {
   flex-direction: column;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .items-start {
@@ -905,10 +869,6 @@ body {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .border {
@@ -982,11 +942,6 @@ body {
      object-fit: cover;
 }
 
-.object-center {
-  -o-object-position: center;
-     object-position: center;
-}
-
 .p-1 {
   padding: 0.25rem;
 }
@@ -1055,14 +1010,6 @@ body {
 
 .pt-1 {
   padding-top: 0.25rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -1417,6 +1364,18 @@ i {
   word-wrap: break-word;
   word-break: break-word;
   overflow-wrap: break-word;
+}
+
+.details-img-style {
+  width: 100%;
+  /* Fill the container width */
+  aspect-ratio: 3 / 2;
+  /* Enforce the 3:2 aspect ratio */
+  -o-object-fit: cover;
+     object-fit: cover;
+  /* Crop the image to fit the aspect ratio */
+  border-radius: 8px;
+  /* Optional: Add rounded corners */
 }
 
 .last\:border-b-0:last-child {
